Also replace placeholders in header/footer